Press new styled button to connect with Fiddle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,21 +2,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:background="@color/peach_backdrop">
 
     <Toolbar
         android:layout_width="match_parent"
         android:layout_height="60dip"
         android:background="@color/light_brown">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dip"
+            android:layout_margin="5dip"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="@drawable/fiddle_cursive_logo"/>
+
     </Toolbar>
+
+    <ImageView
+        android:id="@+id/pair_with_fiddle_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@drawable/fiddle_logo_big_button"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Press to connect with Fiddle"
+        android:textSize="12sp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/darker_brown"
+        android:layout_below="@id/pair_with_fiddle_button"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dip"/>
+
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="80dp" >
+        android:layout_marginTop="80dp"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/paired"
