Preparing email send

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="light_brown">#9E8982</color>
     <color name="darker_brown">#4D433F</color>
     <color name="peach_backdrop">#FFD8CB</color>
+    <color name="lighter_peach">#FFF0EB</color>
 </resources>
