--- a/app/src/main/res/layout/email_input_dialog.xml
+++ b/app/src/main/res/layout/email_input_dialog.xml
@@ -9,7 +9,8 @@
 
     <TextView
         android:id="@+id/info_tv"
-        android:layout_width="wrap_content"
+        android:layout_margin="10dip"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:fontFamily="sans-serif-light"
@@ -22,9 +23,9 @@
     <EditText
         android:id="@+id/message_input"
         android:layout_below="@id/info_tv"
+        android:layout_margin="10dip"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dip"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
         android:textColor="@color/darker_brown"
@@ -34,8 +35,8 @@
         android:id="@+id/email_input"
         android:layout_below="@id/message_input"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dip"
-        android:layout_width="wrap_content"
+        android:layout_margin="10dip"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
         android:textColor="@color/darker_brown"
